--- a/overcomplicated-tictactoe/pom.xml
+++ b/overcomplicated-tictactoe/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
     </dependencies>
 
     <build>
